--- a/introduction.tex
+++ b/introduction.tex
@@ -1,7 +1,7 @@
 \section{Einleitung}
-   Obwohl Pflanzen kein ausgeprägtes Gehörorgan besitzen und Geräusche im her- kömmlichen Sinne nicht wahrnehmen können, haben sie dennoch erstaunliche Fähig- keiten zur Wahrnehmung ihrer Umgebung. Sie reagieren auf Schallwellen indirekt durch Vibrationen, die sie über verschiedene Mechanismen erfassen können. Die Studie hat gezeigt, dass Pflanzen auf eine Vielzahl von Schwingungen reagieren, sei es durch Schallwellen, Windbewegungen oder Berührungen. Diese Fähigkeit ermöglicht es ihnen, ihre Umgebung zu erkennen und angemessen darauf zu reagieren, indem sie beispielsweise ihr Wachstum, ihre Blattstellung oder ihre Abwehrmechanismen anpassen \cite{bachmann-wampfler2022}. \\
+   Obwohl Pflanzen kein ausgeprägtes Gehörorgan besitzen und Geräusche im her- kömmlichen Sinne nicht wahrnehmen können, haben sie dennoch erstaunliche Fähig- keiten zur Wahrnehmung ihrer Umgebung. Sie reagieren auf Schallwellen indirekt durch Vibrationen, die sie über verschiedene Mechanismen erfassen können. Eine Studie hat gezeigt, dass Pflanzen auf eine Vielzahl von Schwingungen reagieren, sei es durch Schallwellen, Windbewegungen oder Berührungen. Diese Fähigkeit ermöglicht es ihnen, ihre Umgebung zu erkennen und angemessen darauf zu reagieren, indem sie beispielsweise ihr Wachstum, ihre Blattstellung oder ihre Abwehrmechanismen anpassen \cite{bachmann-wampfler2022}. \\
    
-   Es wurde gezeigt, dass Musik einen Einfluss auf das Wachstum und die Entwicklung von Pflanzen haben kann. Verschiedene Musikstile und Frequenzen scheinen unterschiedliche Auswirkungen auf Parameter wie Pflanzenhöhe, Blattfläche, Wurzel- wachstum und Blütenbildung zu haben \cite{chowdhury-gupta2015}. \\
+   Es wurde gezeigt, dass Musik das Wachstum und die Entwicklung von Pflanzen beeinflussen kann, wobei verschiedene Musikstile und Frequenzen unterschiedliche Auswirkungen auf Parameter wie Pflanzenhöhe, Blattfläche, Wurzelwachstum und Blütenbildung zu haben \cite{chowdhury-gupta2015}. \\
    
    Die zugrundeliegenden Mechanismen dieser Wechselwirkung zwischen Musik und Pflanzenwachstum sind noch nicht vollständig verstanden. Einige Forschende vermuten, dass Pflanzen auf die Schwingungen und Frequenzen der Musik reagieren, die möglicherweise Einfluss auf zelluläre Prozesse und Signalwege nehmen \cite{gagliano2013}. \\
    
