--- a/sample.bib
+++ b/sample.bib
@@ -34,3 +34,20 @@
     number = {4},
     pages = {789-796}
 }
+
+@article{Yi2003Effect,
+	author={Jia Yi and W. Bochu and Xiujuan Wang and Daohong Wang and Chuanren Duan and Y. Toyama and A. Sakanishi},
+	title={Effect of sound wave on the metabolism of chrysanthemum roots},
+	journal={Colloids and Surfaces B: Biointerfaces},
+	year={2003},
+	volume={29},
+	pages={115-118},
+	doi={10.1016/S0927-7765(02)00155-8}
+}
+
+@misc{ttsmaker,
+  author = {TTSMaker},
+  title = {TTSMaker},
+  howpublished = {\url{https://ttsmaker.com/}},
+  note = {Accessed: 2024-05-03}
+}
