--- a/setup.tex
+++ b/setup.tex
@@ -7,17 +7,17 @@
         \item Beleidigungsgruppe: Regelmäßige Zuwendung mit abwertenden, verletzenden Äußerungen.
     \end{enumerate} 
     
-    Alle Gruppen erhalten identische Wachstumsbedingungen in Bezug auf Licht, Wasser, Temperatur und Bodenbeschaffenheit. Die Samen werden den natürlichen Temperatur-, Licht- und Luftfeuchtigkeitsbedingungen ausgesetzt und in gleich großen Töpfen mit derselben Blumenerdemischung platziert. \\
+    Alle Gruppen erhalten identische Wachstumsbedingungen in Bezug auf Licht, Wasser, Temperatur und Bodenbeschaffenheit. Die Samen werden den einheitlichen Umgebungsbedingungen unseres Raumes ausgesetzt. \\
 
     \subsection{Auswahl der Pflanze}
-    Verwendung der Ringelblume Candyman Orange von Thompson Morgan aufgrund ihrer Robustheit gegen Temperaturschwankungen und der schnellen Keim zeit von 1-2 Wochen.
+    Verwendung der Ringelblume Candyman Orange von Thompson Morgan aufgrund ihrer Robustheit gegen Temperaturschwankungen und der schnellen Keimzeit von 1-2 Wochen.
 
     \subsection{Umfeld}
-    Das Experiment findet in einer kontrollierten Umgebung statt, um ein konsistentes Umfeld für alle Samen sicherzustellen. Die Samen werden den natürlichen Umgebungsbedingungen des Raumes ausgesetzt, einschließlich der natürlichen Temperatur, Lichtintensität und Luftfeuchtigkeit. Die Samen werden in Töpfen mit gleicher Bodenmischung und Größe platziert.
+    Das Experiment findet in einer kontrollierten Umgebung statt, um ein konsistentes Umfeld für alle Samen sicherzustellen. Die Samen werden den Umgebungsbedingungen des Raumes ausgesetzt, mit einer Temperatur von 21-23°C und einer Luftfeuchtigkeit von 40-50%. Und werden in gleich großen Töpfen mit identischen Blumenerdemischung der Marke "Naturkraft" platziert.
 
     \subsection{Etablierung der Versuchspflanzen}
     \subsubsection{Kontrollpflanzen "Stabilitree"}
-    Die Kontrollpflanzen Gruppe wurde als "Stabilitree" bezeichnet, um ihre Rolle als Referenzpunkt für die unbeeinflusste Entwicklung zu betonen. Die unter natürlichen Bedingungen wächst, ohne zusätzliche externe Einflüsse.
+    Die Kontrollpflanzen Gruppe wurde als "Stabilitree" bezeichnet. Die unter natürlichen Bedingungen wächst, ohne zusätzliche externe Einflüsse.
     
     \subsubsection{Lobpflanzen "Rootiful"}
     Die Pflanzen Gruppe, die lobende Worte erhält, wurde als "Rootiful" benannt. Hier werden freundliche, ermutigende Wörter wie "wunderschön", "toll gemacht" oder "beeindruckend" über den Lautsprecher abgespielt.
@@ -29,7 +29,7 @@
     Jede Gruppe wird mit einem separaten Lautsprecher ausgestattet, wobei zwei \\ Creative MUVO Go Stereo-Lautsprecher verwendet werden, um die entsprechende auditive Stimulation zu liefern. Eine mittlere bis niedrige Lautstärke wird dabei für beide Pflanzen gleich eingestellt.
 
     \subsection{Datenerhebung und -analyse}
-    Über einen Zeitraum von 21 Tagen werden folgende Parameter regelmäßig gemessen:
+    Über einen Zeitraum von 14 Tagen werden folgende Parameter regelmäßig gemessen:
     \begin{itemize}
          \item Anzahl der Sprösslinge
          \item Größe der Sprösslinge
